[gd_scene load_steps=11 format=3 uid="uid://dtdv3k4xtujj"]

[ext_resource type="Script" path="res://Player/Scripts/Player.gd" id="1_ci0fj"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerReferences.gd" id="2_lwywf"]
[ext_resource type="Texture2D" uid="uid://6do8v7voit5k" path="res://Player/Sprites/playerSprite.png" id="2_tjp5d"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerInputs.gd" id="3_h0yjc"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerMovement.gd" id="4_pj4k7"]
[ext_resource type="PackedScene" uid="uid://bk123t8lshpv3" path="res://Player/PlayerWeapons/Sword/sword.tscn" id="6_6yb0x"]
[ext_resource type="Script" path="res://Player/Scripts/PlayerRotator.gd" id="6_my4uu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u2pgp"]
radius = 8.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_g1kli"]
atlas = ExtResource("2_tjp5d")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oceeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1kli")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("playerReferences")]
script = ExtResource("1_ci0fj")
playerReferences = NodePath("PlayerReferences")

[node name="PlayerReferences" type="Node" parent="." node_paths=PackedStringArray("playerInputs", "playerMovement")]
script = ExtResource("2_lwywf")
playerInputs = NodePath("../PlayerInputs")
playerMovement = NodePath("../PlayerMovement")

[node name="PlayerInputs" type="Node" parent="."]
script = ExtResource("3_h0yjc")

[node name="PlayerMovement" type="Node" parent="." node_paths=PackedStringArray("player", "playerInputs")]
script = ExtResource("4_pj4k7")
player = NodePath("..")
playerInputs = NodePath("../PlayerInputs")
maxSpeed = 600.0
acceleration = 1200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_u2pgp")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_oceeq")
autoplay = "default"

[node name="PlayerRotator" type="Node2D" parent="."]
script = ExtResource("6_my4uu")
downRad = 180
leftRad = 270
rightRad = 90

[node name="Sword" parent="PlayerRotator" node_paths=PackedStringArray("characterRef", "playerInputs") instance=ExtResource("6_6yb0x")]
characterRef = NodePath("../..")
playerInputs = NodePath("../../PlayerInputs")

[connection signal="movement_direction" from="PlayerMovement" to="PlayerRotator" method="Rotate"]
